syntax = "proto3";

package search;

option go_package = "github.com/kust1q/Zapp/backend/pkg/gen/proto/search;searchproto";

// SearchService exposes read-only search functionality for tweets and users.
service SearchService {
  // Search tweets by query (returns tweets ids)
  rpc SearchTweets(SearchTweetsRequest) returns (SearchTweetsResponse);
  
  // Search users by query (returns users ids)
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
}

message SearchTweetsRequest {
  string query = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message SearchTweetsResponse {
  repeated int64 tweet_ids = 1;
  int64 total_count = 2;
}

message SearchUsersRequest {
  string query = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message SearchUsersResponse {
  repeated int64 user_ids = 1;
  int64 total_count = 2;
}
