syntax = "proto3";

package tweet;

option go_package = "github.com/kust1q/Zapp/backend/proto/tweet;tweetproto";

// TweetService exposes read-only tweet data for integration with other services.
service TweetService {
  // Get single tweet by ID
  rpc GetTweetById (GetTweetByIdRequest) returns (Tweet);
  // Get replies to a specific tweet
  rpc GetRepliesToTweet (GetRepliesToTweetRequest) returns (TweetList);
  // Get all tweets and retweets by a specific username
  rpc GetTweetsAndRetweetsByUsername (GetTweetsAndRetweetsByUsernameRequest) returns (TweetList);
  // Get users who liked a specific tweet
  rpc GetTweetLikes (GetTweetLikesRequest) returns (LikersList);
}

message GetTweetByIdRequest {
  int64 tweet_id = 1;
}

message GetRepliesToTweetRequest {
  int64 tweet_id = 1;
  int32 limit  = 2;
  int32 offset = 3; 
}

message GetTweetsAndRetweetsByUsernameRequest {
  string username = 1;
  int32 limit  = 2;
  int32 offset = 3; 
}

message GetTweetLikesRequest {
  int64 tweet_id = 1;
  int32 limit  = 2;
  int32 offset = 3; 
}

message TweetAuthor {
  int64  id         = 1;
  string username   = 2;
  string avatar_url = 3;
}

message TweetCounters {
  int64 reply_count   = 1;
  int64 retweet_count = 2;
  int64 like_count    = 3;
}

message Tweet {
  int64        id              = 1;
  string       content         = 2;
  string       created_at      = 3;
  string       updated_at      = 4;
  int64        parent_tweet_id = 5;
  string       media_url   = 6;
  TweetAuthor  author          = 7;
  TweetCounters counters       = 8;
}

message TweetList {
  repeated Tweet tweets = 1;
}

message Liker {
  int64  id         = 1;
  string username   = 2;
  string avatar_url = 3;
}

message LikersList {
  repeated Liker users = 1;
}
